scripts/nullaway/wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8.txt
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:12: error: [NullAway] enhanced-for expression variableList is @Nullable
        for (VariableInformation var : variableList) if (var.name.equals(name))
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:63: error: [NullAway] dereferenced expression parseRoot is @Nullable
        for (int i = 0; i < parseRoot.children.size(); i++) {
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperPostParser.java:24: error: [NullAway] dereferenced expression node is @Nullable
        if (node.attribute.equals("DECLARE"))
                ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:126: error: [NullAway] @NonNull field EsperParser$program_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:168: error: [NullAway] @NonNull field EsperParser$statements_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:232: error: [NullAway] @NonNull field EsperParser$statement_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:414: error: [NullAway] @NonNull field EsperParser$expr_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:527: error: [NullAway] @NonNull field EsperParser$term_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:611: error: [NullAway] @NonNull field EsperParser$factor_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:659: error: [NullAway] @NonNull field EsperParser$declaration_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:711: error: [NullAway] @NonNull field EsperParser$assign_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:763: error: [NullAway] @NonNull field EsperParser$ifthenelse_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:854: error: [NullAway] @NonNull field EsperParser$if__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:906: error: [NullAway] @NonNull field EsperParser$elseif_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:953: error: [NullAway] @NonNull field EsperParser$else__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1000: error: [NullAway] @NonNull field EsperParser$condition_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1052: error: [NullAway] @NonNull field EsperParser$conditionaloperator_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1100: error: [NullAway] @NonNull field EsperParser$print_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1147: error: [NullAway] @NonNull field EsperParser$vartype_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1195: error: [NullAway] @NonNull field EsperParser$forloop_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1242: error: [NullAway] @NonNull field EsperParser$for__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1294: error: [NullAway] @NonNull field EsperParser$forgap_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1353: error: [NullAway] @NonNull field EsperParser$whileloop_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1400: error: [NullAway] @NonNull field EsperParser$while__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
24 errors
